--- a/src/FilterCreator/FilterCreator.scss
+++ b/src/FilterCreator/FilterCreator.scss
@@ -1,30 +1,41 @@
 .filters {
   display: flex;
+  flex-direction: column;
 
-  ul {
-    list-style-type: none;
-    display: flex;
-
-    li {
-      color: #20bf6b;
+  .wrapper {
+    .header {
       text-transform: uppercase;
-      background: #ffffff;
-      padding: 20px;
-      border: 4px solid #20bf6b;
-      border-radius: 6px;
-      display: inline-block;
-      transition: all 0.3s ease 0s;
+      text-align: center;
+      color: #494949;
+    }
 
-      &:hover {
-        color: #494949;
-        border-radius: 50px;
-        border-color: #494949;
+    ul {
+      padding: 0;
+      list-style-type: none;
+      display: flex;
+      justify-content: space-between;
+  
+      li {
+        color: #20bf6b;
+        text-transform: uppercase;
+        background: #ffffff;
+        padding: 20px;
+        border: 4px solid #20bf6b;
+        border-radius: 6px;
+        display: inline-block;
         transition: all 0.3s ease 0s;
-      }
-
-      &.focus {
-        color: #A52A2A;
-        border-color: #A52A2A;
+  
+        &:hover {
+          color: #494949;
+          border-radius: 50px;
+          border-color: #494949;
+          transition: all 0.3s ease 0s;
+        }
+  
+        &.active {
+          color: #A52A2A;
+          border-color: #A52A2A;
+        }
       }
     }
   }
