--- a/src/FilterCreator/FilterCreator.scss
+++ b/src/FilterCreator/FilterCreator.scss
@@ -1,12 +1,15 @@
+@import '../scss/variables';
+@import '../scss/mixins';
+
 .filters {
   display: flex;
   flex-direction: column;
 
   .wrapper {
     .header {
-      text-transform: uppercase;
-      text-align: center;
-      color: #494949;
+      @include text_styles;
+
+      color: $color_hover;
     }
 
     ul {
@@ -16,27 +19,38 @@
       justify-content: space-between;
   
       li {
-        color: #20bf6b;
-        text-transform: uppercase;
+        @include text_styles;
+
+        color: $color_non_hover;
         background: #ffffff;
         padding: 20px;
         border: 4px solid #20bf6b;
         border-radius: 6px;
         display: inline-block;
         transition: all 0.3s ease 0s;
+        cursor: pointer;
   
         &:hover {
-          color: #494949;
+          color: $color_hover;
           border-radius: 50px;
-          border-color: #494949;
+          border-color: $color_hover;
           transition: all 0.3s ease 0s;
         }
   
         &.active {
-          color: #A52A2A;
-          border-color: #A52A2A;
+          color: $color_active;
+          border-color: $color_active;
         }
       }
     }
   }
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+
+@media screen and (max-width: 480px) {
+
 }
