--- a/src/NewsCreator/NewsCreator.scss
+++ b/src/NewsCreator/NewsCreator.scss
@@ -1,3 +1,6 @@
+@import '../scss/variables';
+@import '../scss/mixins';
+
 .news-block {
   display: flex;
   flex-direction: column;
@@ -9,28 +12,35 @@
     margin-top: 20px;
     padding: 20px;
     width: 1400px;
-    border: 4px solid #20bf6b;
+    border: 4px solid $color_non_hover;
 
     .url {
+      @include text_styles;
+
       margin-top: 10px;
-      text-align: center;
-      text-transform: uppercase;
-      text-align: center;
-      color: #494949;
+      color: $color_hover;
     }
 
     div {
+      @include text_styles;
+
       margin-top: 20px;
-      text-align: center;
-      text-transform: uppercase;
-      text-align: center;
-      color: #494949;
+      color: $color_hover;
     }
 
     &:hover {
       border-radius: 50px;
-      border-color: #494949;
+      border-color: $color_hover;
       transition: all 0.3s ease 0s;
     }
   }
+}
+
+@media screen and (max-width: 768px) {
+
+}
+
+
+@media screen and (max-width: 480px) {
+
 }
