--- a/src/FilterCreator/FilterCreator.scss
+++ b/src/FilterCreator/FilterCreator.scss
@@ -8,7 +8,7 @@
   .wrapper {
     .header {
       @include text_styles;
-
+      
       color: $color_hover;
     }
 
@@ -16,14 +16,17 @@
       padding: 0;
       list-style-type: none;
       display: flex;
-      justify-content: space-between;
+      flex-wrap: wrap;
+      justify-content: space-around;
   
       li {
         @include text_styles;
 
+        height: 60px;
+        width: 120px;
+        margin-top: 10px;
         color: $color_non_hover;
-        background: #ffffff;
-        padding: 20px;
+        padding: 10px;
         border: 4px solid #20bf6b;
         border-radius: 6px;
         display: inline-block;
@@ -46,11 +49,38 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
+  .filters {
+    .wrapper{
+      .header {
+        font-size: 30px;
+      }
 
+      ul {
+        li {
+          width: 320px;
+          height: 80px;
+          font-size: 25px;
+        }
+      }
+    }
+  }
 }
 
+@media screen and (max-width: 768px) {
+  .filters {
+    .wrapper{
+      .header {
+        font-size: 60px;
+      }
 
-@media screen and (max-width: 480px) {
-
+      ul {
+        li {
+          width: 400px;
+          height: 100px;
+          font-size: 40px;
+        }
+      }
+    }
+  }
 }
