--- a/src/FilterCreator/FilterCreator.scss
+++ b/src/FilterCreator/FilterCreator.scss
@@ -1,85 +1,90 @@
 @import '../scss/variables';
 @import '../scss/mixins';
 
+body {
+  display: block;
+  margin: auto;
+}
+
 .filters {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 
-  .wrapper {
+  .sources-wrapper,
+  .input-wrapper,
+  .non-sources-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: 200px;
+    margin: 10px;
+
     .header {
       @include text_styles;
       
       color: $color_hover;
     }
+    
+    .filter-wrapper {
+      width: 100%;
+    }
 
-    ul {
-      padding: 0;
-      list-style-type: none;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-  
-      li {
-        @include text_styles;
+    button {
+      @include text_styles;
 
-        height: 60px;
-        width: 120px;
-        margin-top: 10px;
-        color: $color_non_hover;
-        padding: 10px;
-        border: 4px solid #20bf6b;
-        border-radius: 6px;
-        display: inline-block;
+      background-color: white;
+      height: 60px;
+      width: 100%;
+      margin-top: 10px;
+      color: $color_non_hover;
+      padding: 10px;
+      border: 4px solid $color_non_hover;
+      border-radius: 6px;
+      display: inline-block;
+      transition: all 0.3s ease 0s;
+      cursor: pointer;
+
+      &:hover {
+        color: $color_hover;
+        border-radius: 50px;
+        border-color: $color_hover;
         transition: all 0.3s ease 0s;
-        cursor: pointer;
-  
-        &:hover {
-          color: $color_hover;
-          border-radius: 50px;
-          border-color: $color_hover;
-          transition: all 0.3s ease 0s;
-        }
-  
-        &.active {
-          color: $color_active;
-          border-color: $color_active;
-        }
       }
     }
-  }
-}
 
-@media screen and (max-width: 1080px) {
-  .filters {
-    .wrapper{
-      .header {
-        font-size: 30px;
-      }
-
-      ul {
-        li {
-          width: 320px;
-          height: 80px;
-          font-size: 25px;
-        }
-      }
+    select, 
+    input {
+      width: 100%;
+      border: 1px solid $color_non_hover;
+      border-radius: 6px;
+      cursor: pointer;
     }
   }
 }
 
 @media screen and (max-width: 840px) {
   .filters {
-    .wrapper{
+  
+    .sources-wrapper,
+    .input-wrapper,
+    .non-sources-wrapper {
+
       .header {
-        font-size: 60px;
+        font-size: 30px;
+      }
+      
+      .filter-wrapper {
+        width: 100%;
       }
 
-      ul {
-        li {
-          width: 400px;
-          height: 100px;
-          font-size: 40px;
-        }
+      button {
+        font-size: 30px;
+      }
+  
+      select, 
+      input {
+        font-size: 30px;
       }
     }
   }
